# sequential-sigmoidal-factor-analysis

./: .gitignore  README.md  demo.ipynb  pyproject.toml  sequential-ppca.ipynb  ssfa.py
sequential_ppca/: __init__.py  ppca.py  sequential_ppca.py
sequential_ppca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ppca.py  test_sequential_ppca.py
