[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sequential-ppca"
version = "0.1.0"
description = "Sequential Probabilistic PCA"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["sequential_ppca*"]
